--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,20 @@ spring.datasource.url=jdbc:mysql://1.15.170.43:3306/ems
 spring.freemarker.suffix=.ftl
 spring.freemarker.template-loader-path=classpath:/templates/
 server.port=8081
+
+mybatis.mapper-locations=classpath:mapping/*.xml
+mybatis.type-aliases-package=com.ems.dal
+
+ems.version=1.0.0.0
+ems.system.name=Ems
+
+
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
+
+spring.devtools.restart.enabled=true
+spring.devtools.restart.additional-paths=src/main/java/
+spring.devtools.restart.exclude=templates,static
+spring.freemarker.cache=false
