--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,5 +20,5 @@ pagehelper.params=count=countSql
 
 spring.devtools.restart.enabled=true
 spring.devtools.restart.additional-paths=src/main/java/
-spring.devtools.restart.exclude=templates,static
+spring.devtools.restart.exclude=/templates
 spring.freemarker.cache=false
