--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,11 @@
             <artifactId>shiro-freemarker-tags</artifactId>
             <version>0.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.thoughtworks.xstream</groupId>
+            <artifactId>xstream</artifactId>
+            <version>1.4.8</version>
+        </dependency>
 
     </dependencies>
 
