--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,9 @@ pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
 pagehelper.params=count=countSql
+
+
+# \u4E0A\u4F20\u6587\u4EF6\u603B\u7684\u6700\u5927\u503C
+spring.servlet.multipart.max-request-size=100MB
+# \u5355\u4E2A\u6587\u4EF6\u7684\u6700\u5927\u503C(\u6CE8\uFF1Aspringboot\u9ED8\u8BA4\u7684\u6587\u4EF6\u5927\u5C0F\u9650\u5236\u4E3A1M)
+spring.servlet.multipart.max-file-size=50MB
