--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,11 @@
             <version>1.4.8</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
