--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,5 @@ pagehelper.params=count=countSql
 spring.servlet.multipart.max-request-size=100MB
 # \u5355\u4E2A\u6587\u4EF6\u7684\u6700\u5927\u503C(\u6CE8\uFF1Aspringboot\u9ED8\u8BA4\u7684\u6587\u4EF6\u5927\u5C0F\u9650\u5236\u4E3A1M)
 spring.servlet.multipart.max-file-size=50MB
+
+spring.aop.proxy-target-class=true
