--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,7 @@ spring.servlet.multipart.max-request-size=100MB
 spring.servlet.multipart.max-file-size=50MB
 
 spring.aop.proxy-target-class=true
+
+
+upload.file.path=/upload/image/
+local.base.dir=D:/upload/image
